--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -17,6 +17,8 @@
   .container,
   .newsletter-wrapper
     max-width: 700px
+  .button, a
+    cursor: default
   .logo
     width: 132px
   .navbar
@@ -31,9 +33,13 @@
       &__link
         font-size: 12px
         line-height: 15px
+        &::after
+          background: none
   .search
     &__input
       width: 340px
+    &__button
+      cursor: default
   .hotel
     padding-bottom: 57px
     &-grid
@@ -86,6 +92,9 @@
         padding: 8px 18px
   .newsletter
     padding: 93px 0 92px
+  .subscribe
+    &__button
+      cursor: default
   .reviews
     &-slider
       &__item
